--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -13,4 +13,4 @@
     <td [attr.colspan]="colspan"></td>
   </tr>
 </table>
-<button class="btn btn-primary">Save</button>
+<button class="btn btn-primary" [class.active]="isActive">Save</button>
