--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -30,3 +30,11 @@
   >Save</button>
 </div>
 
+
+<div class="contailer">
+  {{course.title | uppercase}} <br/>
+  {{course.students | number }} <br/>
+  {{course.rating | number:'1.2-2'}} <br/>
+  {{course.price | currency:'INR':true:'3.2-2' }} <br/>
+  {{course.releaseDate | date:'shortDate'}} <br/>
+</div>
