Implementing custome pipes

--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -31,10 +31,11 @@
 </div>
 
 
-<div class="contailer">
+<div class="container">
   {{course.title | uppercase}} <br/>
   {{course.students | number }} <br/>
   {{course.rating | number:'1.2-2'}} <br/>
   {{course.price | currency:'INR':true:'3.2-2' }} <br/>
   {{course.releaseDate | date:'shortDate'}} <br/>
+  {{text | summary:10 }}
 </div>
