:bookmark:Implement favorite component exsesize

--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -39,3 +39,7 @@
   {{course.releaseDate | date:'shortDate'}} <br/>
   {{text | summary:10 }}
 </div>
+
+<div>
+  <favorite [is-favorite]="isFavorite" (chnage)="isFavoriteChange($event)"></favorite>
+</div>
