:bookmark: implementing title-casing exsersize

--- a/src/app/bindings/bindings.component.html
+++ b/src/app/bindings/bindings.component.html
@@ -43,3 +43,7 @@
 <div>
   <favorite [is-favorite]="isFavorite" (chnage)="isFavoriteChange($event)"></favorite>
 </div>
+
+<div>
+  <title-case></title-case>
+</div>
