--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <h1>Angular</h1>
 <!-- <courses></courses>
 <author></author> -->
- <app-bindings></app-bindings> 
+ <!-- <app-bindings></app-bindings>  -->
+
+
+<bootstrap-panel>
+    <div class="heading">
+        Heading of the panel
+    </div>
+    <div class="body">
+        <h2>Body</h2>
+        <p>Some content</p>
+    </div>
+</bootstrap-panel>
