ng-container implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
 
 
 <bootstrap-panel>
-    <div class="heading">
+    <ng-container class="heading">
         Heading of the panel
-    </div>
-    <div class="body">
+    </ng-container>
+    <ng-container class="body">
         <h2>Body</h2>
-        <p>Some content</p>
-    </div>
+        <p>Some content..</p>
+    </ng-container>
 </bootstrap-panel>
