--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- <courses></courses>
 <author></author> -->
  <!-- <app-bindings></app-bindings>  -->
-
+<!-- 
 
 <bootstrap-panel>
     <ng-container class="heading">
@@ -12,4 +12,6 @@
         <h2>Body</h2>
         <p>Some content..</p>
     </ng-container>
-</bootstrap-panel>
+</bootstrap-panel> -->
+
+<app-like [total-likes]="tweets.totalLikes" [liked]="true"></app-like>
