Restructuring the courses component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Angular</h1>
-<!-- <courses></courses>
-<author></author> -->
- <!-- <app-bindings></app-bindings>  -->
+ <courses></courses> 
+<!-- <author></author>  -->
+<!-- <app-bindings></app-bindings>   -->
 <!-- 
 
 <bootstrap-panel>
@@ -14,4 +14,4 @@
     </ng-container>
 </bootstrap-panel> -->
 
-<app-like [total-likes]="tweets.totalLikes" [liked]="true"></app-like>
+<!-- <app-like [total-likes]="tweets.totalLikes" [liked]="true"></app-like> -->
