--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -9,3 +9,13 @@
 <div [hidden]="courses.length > 0">
   Not courses yet.
 </div>
+
+<ul class="nav nav-pills">
+   <li [class.active]="viewMode== 'map'"> <a (click)="viewMode='map'">MapView</a></li>
+   <li [class.active]="viewMode== 'list'"><a (click)="viewMode='list'">List View</a></li>
+</ul>
+<div [ngSwitch]="viewMode">
+  <div *ngSwitchCase="'map'">Map view content</div>
+  <div *ngSwitchCase="'list'">List view content</div>
+  <div *ngSwitchDefault>otherwise</div>
+</div>
