ngClass attribute directive.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Angular</h1>
- <courses></courses> 
+ <!-- <courses></courses>  -->
 <!-- <author></author>  -->
-<!-- <app-bindings></app-bindings>   -->
+ <app-bindings></app-bindings>   
 <!-- 
 
 <bootstrap-panel>
