--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -5,3 +5,13 @@
   (click)="onClick()"
   >
 </i>
+
+<i 
+  class="glyphicon"
+  [ngClass]="{
+    'glyphicon-star':isFavorite,
+    'glyphicon-star-empty':!isFavorite
+  }"
+  (click)="onClick()"
+  >
+</i>
