Implement zippy component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Angular</h1>
  <!-- <courses></courses>  -->
 <!-- <author></author>  -->
- <app-bindings></app-bindings>   
+ <!-- <app-bindings></app-bindings>    -->
 <!-- 
 
 <bootstrap-panel>
@@ -15,3 +15,10 @@
 </bootstrap-panel> -->
 
 <!-- <app-like [total-likes]="tweets.totalLikes" [liked]="true"></app-like> -->
+
+<zippy title="Shpiing Details">
+    Shpiing Details content
+</zippy>
+<zippy title="Billing Details">
+    Billing Details content
+</zippy>
