Building a bootstrap form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,10 @@
 
 <!-- <app-like [total-likes]="tweets.totalLikes" [liked]="true"></app-like> -->
 
-<zippy title="Shpiing Details">
+<!-- <zippy title="Shpiing Details">
     Shpiing Details content
 </zippy>
 <zippy title="Billing Details">
     Billing Details content
-</zippy>
+</zippy> -->
+<contact-form></contact-form>
