--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,7 +1,7 @@
 <form>
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input id="firstName" type="text" class="form-control">
+    <input ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" class="form-control">
   </div>
   <div class="form-group">
     <label for="comment">Comment</label>
