working with radio buttons

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -31,6 +31,12 @@
       </option>
     </select>
   </div>
+  <div *ngFor="let method of contactMethods" class="radio">
+    <label>
+      <input ngModel type="radio" name="contactMethod" [value]="method.id">
+       {{ method.name }}
+    </label>
+  </div>
   <p>
     {{ f.value | json}}
   </p>
