Udemy course form exersize implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,6 @@
 <zippy title="Billing Details">
     Billing Details content
 </zippy> -->
-<contact-form></contact-form>
+<!-- <contact-form></contact-form> -->
+
+<udemy-course></udemy-course>
