Reactive Forms | Converting boostarp form to reactive form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,4 +24,6 @@
 </zippy> -->
 <!-- <contact-form></contact-form> -->
 
-<udemy-course></udemy-course>
+<!-- <udemy-course></udemy-course> -->
+
+<signup-form></signup-form>
