--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -6,6 +6,9 @@
             id="username" 
             type="text" 
             class="form-control">
+        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+          User name is required.
+        </div>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
