--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -7,7 +7,12 @@
             type="text" 
             class="form-control">
         <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-          User name is required.
+          <div *ngIf="username.errors.required">
+            Username is required.
+          </div>
+          <div *ngIf="username.errors.minlength">
+            Username should be minimum {{ username.errors.minlength.requiredLength }} character.
+          </div>
         </div>
     </div>
     <div class="form-group">
