--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -13,6 +13,9 @@
           <div *ngIf="username.errors.minlength">
             Username should be minimum {{ username.errors.minlength.requiredLength }} character.
           </div>
+        <div *ngIf="username.errors.cannotContainSpace">
+            Username cannot contain space.
+        </div>
         </div>
     </div>
     <div class="form-group">
