Reactive form | Asynchronous validator and Asynchornous operation

--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -13,9 +13,12 @@
           <div *ngIf="username.errors.minlength">
             Username should be minimum {{ username.errors.minlength.requiredLength }} character.
           </div>
-        <div *ngIf="username.errors.cannotContainSpace">
+          <div *ngIf="username.errors.cannotContainSpace">
             Username cannot contain space.
-        </div>
+          </div>
+          <div *ngIf="username.errors.shouldBeUnique">
+            User name should be should be unique.
+          </div>
         </div>
     </div>
     <div class="form-group">
