--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -1,4 +1,7 @@
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="login()">
+    <div *ngIf="form.errors" class="alert alert-danger">
+        The username or password is invalid.
+    </div>
     <div class="form-group">
         <label for="username">Username</label>
         <input 
@@ -30,5 +33,5 @@
             type="text" 
             class="form-control">
     </div>
-    <button class="btn btn-primary" type="submit">Sign Up</button>
+    <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Sign Up</button>
 </form>
