--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -2,36 +2,38 @@
     <div *ngIf="form.errors" class="alert alert-danger">
         The username or password is invalid.
     </div>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input 
-            formControlName="username"
-            id="username" 
-            type="text" 
-            class="form-control">
-        <div *ngIf="username.pending">Checking for uniqueness....</div>
-        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
-          <div *ngIf="username.errors.required">
-            Username is required.
+    <div formGroupName="account">
+      <div class="form-group">
+          <label for="username">Username</label>
+          <input 
+              formControlName="username"
+              id="username" 
+              type="text" 
+              class="form-control">
+          <div *ngIf="username.pending">Checking for uniqueness....</div>
+          <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+            <div *ngIf="username.errors.required">
+              Username is required.
+            </div>
+            <div *ngIf="username.errors.minlength">
+              Username should be minimum {{ username.errors.minlength.requiredLength }} character.
+            </div>
+            <div *ngIf="username.errors.cannotContainSpace">
+              Username cannot contain space.
+            </div>
+            <div *ngIf="username.errors.shouldBeUnique">
+              User name should be should be unique.
+            </div>
           </div>
-          <div *ngIf="username.errors.minlength">
-            Username should be minimum {{ username.errors.minlength.requiredLength }} character.
-          </div>
-          <div *ngIf="username.errors.cannotContainSpace">
-            Username cannot contain space.
-          </div>
-          <div *ngIf="username.errors.shouldBeUnique">
-            User name should be should be unique.
-          </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input 
-            formControlName="password"
-            id="password" 
-            type="text" 
-            class="form-control">
+      </div>
+      <div class="form-group">
+          <label for="password">Password</label>
+          <input 
+              formControlName="password"
+              id="password" 
+              type="text" 
+              class="form-control">
+      </div>
     </div>
     <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Sign Up</button>
 </form>
