Reactive Forms | Form Array

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,4 +26,6 @@
 
 <!-- <udemy-course></udemy-course> -->
 
-<signup-form></signup-form>
+<!-- <signup-form></signup-form> -->
+
+<new-course-form></new-course-form>
