Reactive Forms | Confirm password exersize complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,4 +28,6 @@
 
 <!-- <signup-form></signup-form> -->
 
-<new-course-form></new-course-form>
+<!-- <new-course-form></new-course-form> -->
+
+<change-password></change-password>
