Consuming Http Services | Getting Data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,6 @@
 
 <!-- <new-course-form></new-course-form> -->
 
-<change-password></change-password>
+<!-- <change-password></change-password> -->
+
+<posts></posts>
