--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,4 @@
+<input type="text" class="form-control" (keyup.enter)="createPost(title)" #title>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let post of posts">
     {{  post.title }}
