--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,7 @@
 <input type="text" class="form-control" (keyup.enter)="createPost(title)" #title>
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let post of posts">
+    <button class="btn btn-success btn-sm" (click)="updatePost(post)">Update</button>
     {{  post.title }}
   </li>
 </ul>
