--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -2,6 +2,7 @@
 <ul class="list-group">
   <li class="list-group-item" *ngFor="let post of posts">
     <button class="btn btn-success btn-sm" (click)="updatePost(post)">Update</button>
+    <button class="btn btn-danger btn-sm" (click)="deletPost(post)">Delete</button>
     {{  post.title }}
   </li>
 </ul>
