Consuming Http Services | Github followers exsersize

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,4 +32,5 @@
 
 <!-- <change-password></change-password> -->
 
-<posts></posts>
+<!-- <posts></posts> -->
+<github-followers></github-followers>
