--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>Angular</h1>
  <!-- <courses></courses>  -->
 <!-- <author></author>  -->
  <!-- <app-bindings></app-bindings>    -->
@@ -33,4 +32,7 @@
 <!-- <change-password></change-password> -->
 
 <!-- <posts></posts> -->
-<github-followers></github-followers>
+<!-- <github-followers></github-followers> -->
+
+<navbar></navbar>
+<router-outlet></router-outlet>
