--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -2,4 +2,4 @@
   github-profile works!
 </p>
 
-<button [routerLink]="['/followers',1234]" class="btn btn-primary">Next</button>
+<button class="btn btn-primary" (click)="submit()">Submit</button>
