Routing and Navigation | Assignment 9: Blog Archives

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,8 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <!-- For router link active option got to anguarl url : https://angular.io/api/router/RouterLinkActive  -->
+        <li routerLinkActive="active current" [routerLinkActiveOptions]="{exact:true}"><a routerLink="">Home</a></li>
         <li routerLinkActive="active current"><a routerLink="/followers" [queryParams]="{page:1,order:'newest'}">Followers</a></li>
         <li routerLinkActive="active current"><a routerLink="/posts">Posts</a></li>
       </ul>
