--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<h1>Web Home</h1>
+
+<ul>
+  <li *ngFor="let archive of archives">
+      <a [routerLink]="['/archive',archive.year,archive.month]" 
+      > {{ archive.year + '/' + archive.month }} </a>
+  </li>
+</ul>
