--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,8 +1,10 @@
 <input type="text" class="form-control" (keyup.enter)="createPost(title)" #title>
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let post of posts">
+  <li @fade class="list-group-item" *ngFor="let post of posts">
     <button class="btn btn-success btn-sm" (click)="updatePost(post)">Update</button>
-    <button class="btn btn-danger btn-sm" (click)="deletPost(post)">Delete</button>
+    <button    
+      class="btn btn-danger btn-sm" 
+      (click)="deletPost(post)">Delete</button>
     {{  post.title }}
   </li>
 </ul>
