Animations : Working with Custom States

--- a/src/app/zippy/zippy.component.html
+++ b/src/app/zippy/zippy.component.html
@@ -10,7 +10,9 @@
       }"
     ></span>
   </div>
-  <div *ngIf="isExpanded" class="zippy-body">
+  <div
+    [@expandCollapse]="isExpanded ? 'expanded' : 'collapsed'"
+    class="zippy-body">
     <ng-content></ng-content>
   </div>
 </div>
